# DBlegendsAPI

./: .prettierrc  LICENSE  README.md  package.json
api/: .env  Cargo.toml  README.md  characters.json
api/src/: character.rs  main.rs  readfile.rs  server.rs
api/src/server/: libs.rs
api/src/types/: enums.rs  structs.rs
dbl_scraper/: Cargo.toml  README.md  index.html
dbl_scraper/src/: enums.rs  main.rs  structs.rs
scrapper/: Cargo.toml  index.html
scrapper/src/: enums.rs  main.rs  structs.rs
