[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = "1.0.164"
serde_json = "1.0.96"
serde_with = "3.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
