[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.16.0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.2"
regex = "1.8.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde_with = "3.0.0"
strum_macros = "0.24.3"
strum = "0.24.1"

